feat(tempdir): mkstemp-based create_tempfile, windows-safe fallbacks, prefix truncation, chmod; wire PrismatIQ to prefer atomic tempfiles; add tests

--- a/shard.yml
+++ b/shard.yml
@@ -10,5 +10,8 @@ dependencies:
   crimage:
     github: naqvis/crimage
     version: ~> 1.0
+  tempdir:
+    github: lugia-kun/tempdir
+    version: ~> 0.1
 
 license: MIT
