chore(shard): use correct author email

--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: prismatiq
 version: 0.1.0
 
 authors:
-  - PrismatIQ <dev@prismatiq.io>
+  - kritoke <3081486+kritoke@users.noreply.github.com>
 
 crystal: 1.11.0
 
