fix(ci): use crystal-lang/install-crystal instead of setup-crystal

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Crystal
-        uses: crystal-lang/setup-crystal@v1
+        uses: crystal-lang/install-crystal@v1
         with:
-          # use latest available Crystal in the runner
-          version: latest
+          crystal: 1.11.0
 
       - name: Install shards
         run: shards install
