--- a/shard.yml
+++ b/shard.yml
@@ -12,6 +12,6 @@ dependencies:
     version: ~> 1.0
   tempdir:
     github: kritoke/tempdir
-    version: ~> 0.3
+    version: 1.1.1
 
 license: MIT
